[metadata]
name = python-template
author = Tristan R. Brown
author_email = brown.tristan.r@gmail.com
description = A Python project template
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where=src

[options.extras_require]

[options.entry_points]
console_scripts =
